Fix SplitButton spacing

--- a/src/components/Button/SplitButton/PrimaryButton/PrimaryButton.module.css
+++ b/src/components/Button/SplitButton/PrimaryButton/PrimaryButton.module.css
@@ -1,5 +1,6 @@
 .button {
     flex: 1;
+    padding: 0;
 }
 
 .button,
